# internal/presentation/oas_router_gen.go
@@ -40,7 +40,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		s.notFound(w, r)
 		return
 	}
-	args := [1]string{}
 
 	// Static code generated router with unwrapped path search.
 	switch {
@@ -70,7 +69,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				}
 
 				if len(elem) == 0 {
-					// Leaf node.
 					switch r.Method {
 					case "GET":
 						s.handleGetReservationInfoRequest([0]string{}, elemIsEscaped, w, r)
@@ -84,31 +82,42 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 					return
 				}
+				switch elem[0] {
+				case 'S': // Prefix: "Seat"
 
-			case 't': // Prefix: "train/"
+					if l := len("Seat"); len(elem) >= l && elem[0:l] == "Seat" {
+						elem = elem[l:]
+					} else {
+						break
+					}
 
-				if l := len("train/"); len(elem) >= l && elem[0:l] == "train/" {
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "GET":
+							s.handleGetReservationRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "GET")
+						}
+
+						return
+					}
+
+				}
+
+			case 't': // Prefix: "train"
+
+				if l := len("train"); len(elem) >= l && elem[0:l] == "train" {
 					elem = elem[l:]
 				} else {
 					break
 				}
 
-				// Param: "trainNumber"
-				// Leaf parameter, slashes are prohibited
-				idx := strings.IndexByte(elem, '/')
-				if idx >= 0 {
-					break
-				}
-				args[0] = elem
-				elem = ""
-
 				if len(elem) == 0 {
 					// Leaf node.
 					switch r.Method {
 					case "GET":
-						s.handleGetTrainInfoRequest([1]string{
-							args[0],
-						}, elemIsEscaped, w, r)
+						s.handleGetTrainInfoRequest([0]string{}, elemIsEscaped, w, r)
 					default:
 						s.notAllowed(w, r, "GET")
 					}
@@ -130,7 +139,7 @@ type Route struct {
 	operationID string
 	pathPattern string
 	count       int
-	args        [1]string
+	args        [0]string
 }
 
 // Name returns ogen operation name.
@@ -219,7 +228,6 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				}
 
 				if len(elem) == 0 {
-					// Leaf node.
 					switch method {
 					case "GET":
 						r.name = GetReservationInfoOperation
@@ -249,23 +257,40 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						return
 					}
 				}
+				switch elem[0] {
+				case 'S': // Prefix: "Seat"
 
-			case 't': // Prefix: "train/"
+					if l := len("Seat"); len(elem) >= l && elem[0:l] == "Seat" {
+						elem = elem[l:]
+					} else {
+						break
+					}
 
-				if l := len("train/"); len(elem) >= l && elem[0:l] == "train/" {
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "GET":
+							r.name = GetReservationOperation
+							r.summary = "号車ごとの予約状況取得"
+							r.operationID = "getReservation"
+							r.pathPattern = "/reservationSeat"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+				}
+
+			case 't': // Prefix: "train"
+
+				if l := len("train"); len(elem) >= l && elem[0:l] == "train" {
 					elem = elem[l:]
 				} else {
 					break
 				}
-
-				// Param: "trainNumber"
-				// Leaf parameter, slashes are prohibited
-				idx := strings.IndexByte(elem, '/')
-				if idx >= 0 {
-					break
-				}
-				args[0] = elem
-				elem = ""
 
 				if len(elem) == 0 {
 					// Leaf node.
@@ -274,9 +299,9 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						r.name = GetTrainInfoOperation
 						r.summary = "列車情報の取得"
 						r.operationID = "getTrainInfo"
-						r.pathPattern = "/train/{trainNumber}"
+						r.pathPattern = "/train"
 						r.args = args
-						r.count = 1
+						r.count = 0
 						return r, true
 					default:
 						return
